<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY default_data_to_preserve "Data to preserve:">
    <!ENTITY default_current_page "Current page:">
    <!ENTITY default_last_page "Last page:">
    <!ENTITY default_data_list "Data list:">
    <!ENTITY default_query_ui "Query:">
    <!ENTITY default_location_ui "Location:">
]>

<resources>

    <!-- General -->
    <string name="app_name">Rework</string>
    <string name="pref_filename">pref_filename</string>
    <!-- ~General -->



    <!-- Fragment transactions -->
    <string name="fragment_primary_temp">Temp primary fragment. Id: %1$d</string>
    <string name="fragment_secondary_temp">Temp secondary fragment. Id: %1$d</string>
    <string name="fragment_single_primary_temp">Temp single primary fragment. Id: %1$d</string>
    <string name="fragment_primary_add_secondary">Add secondary fragment</string>
    <string name="fragment_primary_add_primary">Add primary fragment</string>
    <string name="fragment_primary_add_primary_single">Add single primary fragment</string>
    <!-- ~Fragment transactions -->



    <!-- Keys -->
    <string name="bundle_total_stack_size_key">total_count</string>
    <string name="bundle_primary_stack_size_key">primary_count</string>
    <string name="bundle_children_stack_size_key">children_count</string>
    <string name="bundle_fragment_id_key">fragment_id</string>
    <string name="bundle_lat_key">lat_key</string>
    <string name="bundle_lng_key">lng_key</string>
    <string name="bundle_category_key">category_key</string>
    <string name="bundle_url_key">url_key</string>

    <string name="settings_username_key">username_key</string>
    <string name="settings_startup_key">startup_key</string>
    <string name="settings_power_key">power_key</string>
    <string name="settings_theme_key">theme_key</string>
    <string name="settings_auth_key">auth_key</string>
    <string name="settings_scheduler_key">scheduler_key</string>

    <string name="pref_username_key">pref_username_key</string>
    <string name="pref_user_id_key">pref_user_id_key</string>
    <string name="pref_sched_query_key">pref_sched_query_key</string>
    <string name="pref_sched_pages_key">pref_sched_pages_key</string>
    <string name="pref_sched_interval_key">pref_sched_interval_key</string>
    <string name="pref_sched_starttime_key">pref_sched_starttime_key</string>
    <string name="pref_sched_lasttime_key">pref_sched_lasttime_key</string>
    <string name="pref_sched_fetched_pages_key">pref_sched_fetched_pages_key</string>

    <string name="worker_query_key">worker_query_key</string>
    <string name="worker_pages_key">worker_pages_key</string>
    <string name="worker_scheduler_tag">worker_scheduler_tag</string>

    <string name="scheduler_notifications_channel_id">sched_notification_channel_id</string>
    <string name="scheduler_notification_id">1</string>

    <string name="notification_id_key">notification_id_key</string>
    <!-- ~Keys -->



    <!-- Notification values -->
    <string name="scheduler_notification_title">Scheduled update successful</string>
    <string name="scheduler_notification_text">Preview: %1$s</string>
    <string name="scheduler_notification_info">Total photos: %1$d</string>

    <string name="scheduler_channel_name">Schedule</string>
    <string name="scheduler_channel_description">Scheduled data fetches.</string>
    <!-- ~Notification values -->



    <!-- Navigation titles -->
    <string name="nav_home_title">Home</string>
    <string name="nav_fav_title">Favourites</string>
    <string name="nav_history_title">History</string>
    <string name="nav_gallery_title">Gallery</string>
    <string name="nav_map_title">Map</string>
    <string name="nav_map_res_title">Location search</string>
    <string name="nav_sched_res_title">Scheduled results</string>
    <string name="nav_settings_title">Settings</string>
    <string name="nav_detail_title">Detail</string>
    <string name="nav_splash_title">Welcome</string>
    <string name="nav_auth_title">Authorization</string>
    <string name="nav_scheduler_title">Schedule</string>
    <!-- ~Navigation titles -->



    <!-- UI values -->
    <string name="search_button_text">Search</string>
    <string name="center_button_text">Center</string>
    <string name="create_button_text">Create</string>
    <string name="remove_button_text">Remove</string>
    <string name="star_button_text">Star</string>
    <string name="unstar_button_text">Unstar</string>
    <string name="download_button_text">Download</string>
    <string name="photo_button_text">Take a photo</string>
    <string name="request_permission_button_text">Request permission</string>
    <string name="submit_button_text">Submit</string>

    <string name="previous_page_button_text">&lt; previous page</string>
    <string name="next_page_button_text">next page &gt;</string>

    <string name="current_location_ui">Current location</string>
    <string name="default_location_ui">&default_location_ui;</string>
    <string name="location_ui">&default_location_ui;\n%1$f, %2$f</string>

    <string name="query_english_only_err">English letters / digits / spaces / underscores only.</string>
    <string name="query_not_blank_err">Search query can\'t be blank.</string>
    <string name="username_english_only_err">English letters / digits / underscores only.</string>
    <string name="username_not_blank_err">Username can\'t be blank.</string>
    <string name="username_non_existence_err">User doesn\'t exist.</string>
    <string name="username_existence_err">User already exists.</string>

    <string name="star_log_in_err">You need to be logged in to star.</string>
    <string name="download_permission_err">Insufficient permissions.</string>

    <string name="default_home_header">A free text search. Photos who\'s title, description or tags contain the text will be returned. You can exclude results that match a term by prepending it with a - character.</string>
    <string name="home_header">Query: %1$s\nCurrent page: %2$d\nTotal pages: %3$d</string>
    <string name="default_map_res_header"> </string>
    <string name="map_res_header">Lat: %1$f\nLng: %2$f\nCurrent page: %3$d\nTotal pages: %4$d</string>
    <string name="default_gallery_header">Gallery of saved photos.</string>
    <string name="gallery_header">Current page: %1$d\nTotal pages: %2$d</string>
    <string name="default_sched_res_header"> </string>
    <string name="sched_res_header">Current page: %1$d\nTotal pages: %2$d</string>

    <string name="lat_lng_string_representation">Lat/Lng - %1$f/%2$f</string>

    <string name="category_ui">Category: %1$s</string>
    <string name="url_ui">Url: %1$s</string>

    <string name="settings_general_category_title">General</string>
    <string name="settings_appearance_category_title">Appearance</string>
    <string name="settings_account_category_title">Account</string>

    <string name="change_theme_ui">Change theme</string>
    <string name="start_on_boot_ui">Start on boot</string>
    <string name="start_on_boot_summary"><b>Not recommended.</b> Automatically start application on boot.</string>
    <string name="power_changes_ui">Power change notifications</string>
    <string name="power_changes_summary"><b>Not recommended.</b> Receive notifications any time power state changes.</string>
    <string name="scheduler_ui">Scheduler</string>
    <string name="scheduler_summary">Schedule updates for a selected search query.</string>

    <string name="scheduler_info_ui">"%1$s" data will be fetched in %2$s.</string>
    <string name="scheduler_period_ui">Interval: </string>
    <string name="scheduler_pages_ui">Pages: </string>

    <string name="sched_res_not_set_up_ui">You can set up periodical updates in Settings.</string>
    <string name="sched_res_not_updated_ui">Periodical updates were set up on %1$s.\nSpecified interval has not yet passed.\nQuery: %2$s, Pages: %3$s, Interval: %4$s</string>
    <string name="sched_res_updated_ui">Periodical updates were set up on %1$s.\nLast update was received on %2$s.\nQuery: %3$s, Pages: %4$d out of %5$d, Interval: %6$s</string>

    <string name="log_in_ui">Log in</string>
    <string name="log_out_ui">Log out</string>

    <string name="username_hint">Username</string>
    <string name="username_anonymous_ui">Anonymous</string>

    <string name="history_anonymous_ui">Log in to save history.</string>
    <string name="history_ui">%1$s\'s history</string>
    <string name="history_page_ui">Page: %1$d</string>

    <string name="favourites_anonymous_ui">Log in to access favourites.</string>
    <string name="favourites_ui">%1$s\'s favourites</string>
    <string name="favourites_page_ui">Page: %1$d</string>

    <string name="power_connected_ui">Power connected</string>
    <string name="power_disconnected_ui">Power disconnected</string>

    <string name="broadcast_error_ui">Broadcast error</string>
    <!-- ~UI values -->



    <!-- Test UI values -->
    <string name="no_data_to_restore">No preserved data to restore.</string>
    <string name="restored_data">Restored data: %1$s</string>
    <string name="default_data_to_preserve">&default_data_to_preserve;</string>
    <string name="data_to_preserve">&default_data_to_preserve; %1$s</string>

    <string name="default_current_page">&default_current_page;</string>
    <string name="current_page">&default_current_page; %1$d</string>
    <string name="default_last_page">&default_last_page;</string>
    <string name="last_page">&default_last_page; %1$d</string>
    <string name="default_data_list">&default_data_list;</string>
    <string name="data_list">&default_data_list; %1$s</string>
    <string name="default_query_ui">&default_query_ui;</string>
    <string name="query_ui">&default_query_ui; %1$s</string>
    <!-- ~Test UI values -->



</resources>
