<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/settings_general_category_title">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/settings_startup_key"
            android:title="@string/start_on_boot_ui"
            android:summary="@string/start_on_boot_summary"
            />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/settings_power_key"
            android:title="@string/power_changes_ui"
            android:summary="@string/power_changes_summary"
            />

        <Preference
            android:title="@string/scheduler_ui"
            android:summary="@string/scheduler_summary"
            android:key="@string/settings_scheduler_key"
            />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/settings_appearance_category_title">

        <ListPreference
            android:title="@string/change_theme_ui"
            android:key="@string/settings_theme_key"
            android:defaultValue="theme_auto"
            app:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/settings_account_category_title">

        <Preference
            android:key="@string/settings_username_key"
            android:selectable="false"
            />

        <Preference
            android:key="@string/settings_auth_key"
            />

    </PreferenceCategory>

</PreferenceScreen>