<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/gallery_error_l"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <TextView
            android:id="@+id/gallery_error_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginStart="@dimen/normal_margin"
            android:text="@string/download_permission_err"
            />

        <Button
            android:id="@+id/gallery_request_b"
            android:layout_margin="@dimen/normal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_permission_button_text"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gallery_content_l"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/gallery_photo_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:text="@string/photo_button_text"
            />

       <FrameLayout
           android:id="@+id/gallery_results_content_frame"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           />

    </LinearLayout>


</FrameLayout>